@@ -5,7 +5,7 @@
 section \<open>ATP Problem Importer\<close>
 
 theory ATP_Problem_Import
-imports Complex_Main TPTP_Interpret "HOL-Library.Refute"
+  imports Complex_Main TPTP_Interpret "HOL-Library.Refute"
 begin
 
 ML_file \<open>sledgehammer_tactics.ML\<close>
